# ansible-role-systemd_service

./: .gitreview  CONTRIBUTING.rst  README.md  README.rst  ansible-role-requirements.yaml  requirements.yml  setup.cfg  tox.ini
defaults/: main.yml
doc/: Makefile
doc/source/: conf.py  index.rst
examples/: playbook.yml
handlers/: main.yml  socket_restart.yml  systemd_restart.yml
html-docs/: genindex.html  index.html  objects.inv  search.html  searchindex.js
html-docs/_sources/: index.rst.txt
html-docs/_static/: sphinxmark.css
meta/: main.yml
molecule/default/: molecule.yml
releasenotes/source/: conf.py  index.rst
tasks/: main.yml  systemd_load.yml
templates/: systemd-dhcp.network.j2  systemd-init.j2  systemd-netns-access@.service.j2  systemd-netns@.service.j2  systemd-service-overrides.j2  systemd-service.j2  systemd-socket.j2  systemd-timer.j2  systemd-tmpfiles-lock.j2  systemd-tmpfiles.j2
tests/: test.yml
tests/group_vars/: all_containers.yml
tests/host_vars/: localhost.yml
vars/: main.yml
